--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "compression": "^1.7.0",
+    "config": "^1.26.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "ejs": "^2.5.7",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "moment": "^2.18.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "mysql2": "^1.4.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
   }
 }
